[package]
name = "halloween-2023"
version = "0.1.0"
authors = ["Todd Treece <todd@uniontownlabs.org>"]
edition = "2021"

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
log = "0.4.14"
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.16"
async-trait = "0.1.73"
crossterm = "0.27.0"

[target.'cfg(all(target_os = "linux", target_arch = "aarch64"))'.dependencies]
rppal = {version="0.14.1", features=["hal"]}

#[target.'cfg(not(all(target_os = "linux", target_arch = "aarch64")))'.dependencies]
#crossterm = "0.27.0"

[[bin]]
name = "halloween-2023"
path = "src/main.rs"

[profile.release]
panic = 'abort'
